src/objects/Job_Log__x.object
<CustomObject>
    <description>Job_Log</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$Job_Log</externalName>
    <fields>
        <fullName>error__c</fullName>
        <description>error</description>
        <externalDeveloperName>error</externalDeveloperName>
        <label>error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start__c</fullName>
        <description>start</description>
        <externalDeveloperName>start</externalDeveloperName>
        <label>start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stop__c</fullName>
        <description>stop</description>
        <externalDeveloperName>stop</externalDeveloperName>
        <label>stop</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>success__c</fullName>
        <description>success</description>
        <externalDeveloperName>success</externalDeveloperName>
        <label>success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>type</description>
        <externalDeveloperName>type</externalDeveloperName>
        <label>type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warn__c</fullName>
        <description>warn</description>
        <externalDeveloperName>warn</externalDeveloperName>
        <label>warn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job_Log</label>
    <pluralLabel>Job_Log</pluralLabel>
</CustomObject>